Fix the lightbox cannot overlap when scrolling on mobile layout

--- a/css/todoapp.css
+++ b/css/todoapp.css
@@ -154,7 +154,7 @@ html * {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.9);
